--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 certifi==2024.8.30
+colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 easyocr==1.7.2
@@ -39,6 +40,7 @@ tifffile==2024.9.20
 torch==2.5.1.post6
 torchvision==0.20.1a0
 tornado==6.4.2
+tqdm==4.67.1
 typing_extensions==4.12.2
 unicodedata2==15.1.0
 wheel==0.45.1
